@@ -1,3 +1,14 @@
+2018-03-21  Eric Carlson  <eric.carlson@apple.com>
+
+        Fix typo in inactive media stream timeout default value
+        https://bugs.webkit.org/show_bug.cgi?id=183872
+        <rdar://problem/38723903>
+
+        Reviewed by Jer Noble.
+
+        * Shared/WebPreferences.yaml: Fix typo.
+        * Shared/WebPreferencesDefaultValues.h: Ditto.
+
 2018-03-21  Chris Dumez  <cdumez@apple.com>
 
         Make policy decisions asynchronous
